<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/borrowed_books"
        android:icon="@drawable/ic_book_24px"
        android:title="@string/borrowing" />
    <item
        android:id="@+id/owned_books"
        android:icon="@drawable/ic_bookshelf_24px"
        android:title="@string/owned_books" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_24px"
        android:title="@string/title_profile" />

</menu>
